test/1.4/errors/T_EERRSTMT.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

method empty() throws {}

inline method empty_inline(inline x) throws {}

method m5() {
    try {
        empty();
    } catch {
        /// ERROR EERRSTMT
        error;
    }
    try {
        empty_inline(0);
    } catch {
        // This changed since 1.2, SIMICS-9503
        /// ERROR EERRSTMT
        error;
    }
    if (false) {
        /// ERROR EERRSTMT
        error;
    }
    if (true) {
    } else {
        /// ERROR EERRSTMT
        error;
    }
}

method init() {
    m5();
}
